...
    <string name="components_bottom_bar_items_library">Library</string>

    <!-- Snackbar -->
    <string name="components_snackbar_undo">Undo</string>

    <!-- DurationInput -->
    <string name="components_duration_input_hours_content_description">Target hours input</string>
    <string name="components_duration_input_minutes_content_description">Target minutes input</string>

    <!-- ShowcaseView Intro Dialog -->
    <string name="components_showcase_dialog_button">Nice!</string>

</resources>
